# NeQuickJRC

./: .gitignore  CMakeLists.txt  README.md  README.txt  pyproject.toml
.github/workflows/: build_package.yml  publish.yml
app/: CMakeLists.txt
lib/: CMakeLists.txt  NeQuickG_JRC.c  NeQuickG_JRC_TEC_integration.c  NeQuickG_JRC_iono_F2_layer_fourier_coefficients.h  NeQuickG_JRC_ray.c  NeQuickG_JRC_ray.h
lib/include/: NeQuickG_JRC.h
nequick/: __init__.py  cli.py
nequick/_c_ext/src/: mtable_init.c
pynequick/: cli.py
test/benchmark/: benchmarkRO
test/nequick/: test_cli.py  test_import_fallback.py  test_nequick.py
test/pynequick/: test_cli.py
test/unit_test/: CMakeLists.txt  NeQuickG_JRC_API_test.c  NeQuickG_JRC_ray_test.c  definitions.h  test.c
