[project]
name = "pynequick"
version = "0.1.0"
description = "Package that wraps NeQuick in Python"
authors = [
  { name = "Miquel Garcia-Fernandez", email = "miquel.garcia.fernandez@upc.edu" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy <2.0.0",
]

[project.optional-dependencies]
test = [
  "coverage >= 7.6.11",
  "pytest >= 8.3.4",
  "pytest-env >= 1.1.5"
]

[project.scripts]
nequick = "pynequick.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pynequick", "pynequick.*"]
